--- a/new/index.html
+++ b/new/index.html
@@ -10,6 +10,12 @@
     <div class="wrapper">
 
         <header class="header">
+           <div class="mobil_menu">
+               <div class="line"></div>
+               <div class="line"></div>
+               <div class="line"></div>
+               <div class="line"></div>
+           </div>
            <div class="face"></div>
            <div>
                <h1>My news</h1>
@@ -27,22 +33,22 @@
             <div class="middle">
                    <aside class="left-sidebar">
                        <br><br>
-                       <ul class="nav_top" style="flex-direction:column">
+                       <ul class="nav_left">
                            <li><a href="#">Main</a></li>
                            <li><a href="#">Contacts</a></li>
                            <li><a href="#">Mail</a></li>
-                           <li><a href="#">About us</a></li>
                        </ul>
 
                    </aside><!-- .left-sidebar -->
                     <main class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>           
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a accusamus </p>                              
                     </main><!-- .content -->
             </div><!-- .middle-->
         </div>
     </div><!-- .wrapper -->
 <footer class="footer">
-	<strong>Footer:</strong> 
+    <br>
+	<strong>&copy; Oleksandr Kuts</strong> 
 </footer><!-- .footer -->
     
 </body>
