--- a/new/index.html
+++ b/new/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Line try</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/64.png"/>
 </head>
