--- a/new/index.html
+++ b/new/index.html
@@ -5,7 +5,7 @@
     <title>Line try</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="img/64.png"/>
+	<link rel="shortcut icon" href="img/kuts.png"/>
 </head>
 <body>
     <div class="wrapper">
