--- a/HW/index.html
+++ b/HW/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
- <script src="06-3.js"></script>
+ <script src="06 3 changeN.js"></script>
 </body>
 </html>
