--- a/HW/index.html
+++ b/HW/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
- <script src="07 array.js"></script>
+  <h1>hello</h1>
+    <script src="09 object2.js"></script>
 </body>
 </html>
