--- a/HW/index.html
+++ b/HW/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>hello</h1>
-    <script src="09 object2.js"></script>
+    <script src="10 constructor.js"></script>
 </body>
 </html>
